# kodlang

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  ROADMAP.md  TODO.md  hello.kod  index.html  kodc.kod  other.kod  prek.toml  pyproject.toml  requirements.txt  search.json  sitemap.xml  zensical.toml
arrays/: index.html
bench/: fib.kod  gzip.kod  run.sh  selfcompile.kod  sort.kod  strmap.kod
bootstrap/: sh_kodc
builtins/: index.html
cli/: index.html
control-flow/: index.html
docs/: arrays.md  builtins.md  cli.md  control-flow.md  enums.md  functions.md  index.md  install.md  json.md  memory-layout.md  modules.md  pattern-matching.md  quickstart.md  self-hosting.md  strings.md  structs.md  testing.md  types.md
enums/: index.html
functions/: index.html
install/: index.html
json/: index.html
kod/: __init__.py  __main__.py  ast.py  builder.py  compiler.py  compiler_test.py  exceptions.py  filesys.py  filesys_test.py  interpreter.py  lexer.py  parser.py  paths.py  program.py  span.py  tokens.py  typechecker.py  types.py  values.py
memory-layout/: index.html
modules/: index.html
pattern-matching/: index.html
quickstart/: index.html
scripts/: build_sh_kodc.sh
self-hosting/: index.html
stdlib/: arena.c  builtins.kod  deflate.kod  fs.kod  fs_test.kod  gzip.kod  import_test.kod  io.kod  io_test.kod  json.kod  json_test.kod  jsonrpc.kod  lang_test.kod  map_test.kod  os.kod  panic_test.kod  process.kod  process_test.kod  runtime.c  set.kod  set_test.kod  sort.kod  sort_test.kod  time.kod  time_test.kod
(+146 files in other folders)
