[project]
name = "kod"
version = "0.1.0"
dependencies = [
  "mypy",
  "pytest",
]
requires-python = ">=3.13"

[project.scripts]
kod = "kod:__main__"

[tool.setuptools]
packages = [
  "kod",
]

[tool.ruff.lint]
extend-select = [
  "I",  # isort
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "pytest>=8.3.2",
    "pyright>=1.1.377",
]
