[project]
name = "kod"
version = "0.1.0"
dependencies = [
  "mypy",
  "pytest",
]
requires-python = ">=3.13"

[project.scripts]
kod = "kod.__main__:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "kod",
]

[tool.ruff]
builtins = ["dbg"]

[tool.ruff.lint]
extend-select = [
  "I",  # isort
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "ruff>=0.6.2",
    "pytest>=8.3.2",
    "pyright>=1.1.377",
    "prek>=0.3.9",
]
